tests/ui/argument-suggestions/formal-and-expected-differ.stderr
error[E0308]: mismatched types
  --> $DIR/formal-and-expected-differ.rs:22:29
   |
LL |     let _: U<_, u32> = U(1, S(3u32));
   |                        -    ^^^^^^^ expected `S<f32>`, found `S<u32>`
   |                        |
   |                        arguments to this struct are incorrect
   |
   = note: expected struct `S<f32>`
              found struct `S<u32>`
note: tuple struct defined here
  --> $DIR/formal-and-expected-differ.rs:9:12
   |
LL | pub struct U<T1, T2>(T1, S<T2>)
   |            ^

error[E0308]: mismatched types
  --> $DIR/formal-and-expected-differ.rs:22:24
   |
LL |     let _: U<_, u32> = U(1, S(3u32));
   |            ---------   ^^^^^^^^^^^^^ expected `U<_, u32>`, found `U<i32, f32>`
   |            |
   |            expected due to this
   |
   = note: expected struct `U<_, u32>`
              found struct `U<i32, f32>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
